# rustKV

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FAILURE_MODES.md  Makefile  PLAN.md  README.md  compose.yaml
.github/workflows/: ci.yml  nightly.yml
scripts/: partition-test.sh  run-cluster.sh
src/: api.rs  config.rs  kv.rs  lib.rs  main.rs  rng.rs  store.rs
src/raft/: mod.rs  node.rs  rpc.rs  storage.rs  types.rs
src/raft/transport/: http.rs  mod.rs  sim.rs
tests/: cluster_http.rs  dedup.rs  election.rs  faults.rs  harness_soundness.rs  http_api.rs  http_transport.rs  jepsen.rs  membership.rs  read_index.rs  replication.rs  snapshot.rs  three_process.rs
tests/common/: lin.rs  mod.rs
