[package]
name = "rustkv"
version = "0.1.0"
edition = "2024"

# HARD CONSTRAINT: [dependencies] may only contain crates from the whitelist in
# CLAUDE.md (tokio, axum, serde/serde_json, tracing/tracing_subscriber).
# Dev-dependencies are allowed but kept minimal.

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time", "io-util"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
# test-util enables tokio::time::pause / start_paused (virtual time) for the
# deterministic transport-simulator tests; test builds only.
tokio = { version = "1", features = ["test-util"] }
